<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sgosavi.best.Main4Activity">

    <Button
        android:id="@+id/Potatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Potatoes"
        app:layout_constraintBottom_toTopOf="@+id/Tomatoes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Potatoes"/>

    <Button
        android:id="@+id/Onions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/Onions"
        app:layout_constraintBottom_toTopOf="@+id/Cabbage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        tools:text="Onions"/>

    <Button
        android:id="@+id/Tomatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tomatoes"
        app:layout_constraintBottom_toTopOf="@+id/Beetroot"
        app:layout_constraintEnd_toStartOf="@+id/Cabbage"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="tomatoes"/>

    <Button
        android:id="@+id/Cabbage"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="52dp"
        android:text="@string/Cabbage"
        app:layout_constraintBottom_toTopOf="@+id/Spinach"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Cabbage"/>

    <Button
        android:id="@+id/Beetroot"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginBottom="128dp"
        android:layout_marginEnd="232dp"
        android:text="@string/beetroot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="beetroot" />

    <Button
        android:id="@+id/Spinach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="52dp"
        android:text="@string/spinach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="spinach"/>
</android.support.constraint.ConstraintLayout>
