<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sgosavi.best.TomatoActivity">

    <TextView
        android:id="@+id/nameattomatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/nameviewattomatoes"
        android:text="@string/title_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Name" />

    <EditText
        android:id="@+id/nameviewattomatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rateattomatoes"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/rateattomatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/details"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="83dp"
        android:text="@string/title_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="price/kg" />

    <Button
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView12"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView12"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"

        android:text="@string/title_details" />

    <EditText
        android:id="@+id/rate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameviewattomatoes"
        android:layout_alignStart="@+id/nameviewattomatoes"
        android:layout_below="@+id/nameviewattomatoes"
        android:ems="10"
        android:inputType="text|textPersonName|number" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nameattomatoes"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/tom" android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/details"
        android:layout_toLeftOf="@+id/rate1"
        android:layout_toStartOf="@+id/rate1"
        android:text="@string/button"
        android:onClick="send"
        tools:text="Send" />

</RelativeLayout>
