<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sgosavi.best.CabbageActivity">

    <EditText
        android:id="@+id/nameviewatcabbage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rate"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/rate"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/nameatcaabage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/nameviewatcabbage"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/title_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Name" />

    <TextView
        android:id="@+id/rateatcabbage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameviewatcabbage"
        android:layout_marginTop="73dp"
        android:text="@string/title_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="price/kg" />

    <EditText
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/rateatcabbage"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView11"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView11"
        android:layout_marginBottom="32dp"

        android:text="@string/title_details" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nameatcaabage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/cabbage" android:contentDescription="@string/image" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/details"
        android:layout_alignLeft="@+id/imageView11"
        android:layout_alignStart="@+id/imageView11"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:text="@string/button"
        android:onClick="send"
        tools:text="Send" />

</RelativeLayout>
