<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sgosavi.best.OrangeActivity">

    <Button
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginBottom="18dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:text="@string/title_details" />

    <EditText
        android:id="@+id/nameatoranges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/details"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText7"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_toLeftOf="@+id/editText7"
        android:layout_toStartOf="@+id/editText7"
        android:text="@string/title_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editText7"
        android:text="@string/title_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="Price/kg" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        app:srcCompat="@drawable/oranges" android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/details"
        android:layout_toLeftOf="@+id/editText7"
        android:layout_toStartOf="@+id/editText7"
        android:text="@string/button"
        android:onClick="send"
        tools:text="Send" />

</RelativeLayout>
