<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sgosavi.best.WheatActivity">

    <Button
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/title_details" />

    <EditText
        android:id="@+id/rate5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/details"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="61dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/nameviewatwheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rateatwheat"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/nameatwheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameviewatwheat"
        android:layout_alignBottom="@+id/nameviewatwheat"
        android:layout_alignEnd="@+id/rateatwheat"
        android:layout_alignRight="@+id/rateatwheat"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/title_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Name" />

    <TextView
        android:id="@+id/rateatwheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/rate5"
        android:text="@string/title_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="Rs/kg" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rate5"
        android:layout_toLeftOf="@+id/rate5"
        android:layout_toStartOf="@+id/rate5"
        android:text="@string/button"
        android:onClick="send"
        tools:text="Send" />

</RelativeLayout>
