<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sgosavi.best.Main19Activity">

    <Button
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView15"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView15"

        android:layout_marginBottom="47dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/title_details" />

    <EditText
        android:id="@+id/nameviewatrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rsatrice"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/rsviewatrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/details"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/nameatrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameviewatrice"
        android:layout_alignBottom="@+id/nameviewatrice"
        android:layout_alignEnd="@+id/rsatrice"
        android:layout_alignRight="@+id/rsatrice"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/title_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Name" />

    <TextView
        android:id="@+id/rsatrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rsviewatrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/title_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="Rs/kg" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/rice" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/details"
        android:layout_toLeftOf="@+id/rsviewatrice"
        android:layout_toStartOf="@+id/rsviewatrice"
        android:text="@string/button"
        android:onClick="send"
        tools:text="Send" />

</RelativeLayout>
